--- a/index.html.html
+++ b/index.html.html
@@ -55,7 +55,7 @@
             </div>
             <div id="social-container">
                 <img 
-                src="./assets/second.jpg" 
+                src="./assets/f.png" 
                 alt="linked in profile" 
                 class ="icon" 
                 onclick="location.href  = 'https:/www.facebook.com/jhuneille.mark/'"/>
